--- a/References/References.bib
+++ b/References/References.bib
@@ -2972,3 +2972,736 @@ address="Berlin, Heidelberg",
 pages="437--455",
 isbn="978-3-642-01957-9"
 }
+
+@inproceedings{Verhaert2018,
+  doi = {10.5220/0006858501880199},
+  url = {https://doi.org/10.5220/0006858501880199},
+  year = {2018},
+  publisher = {{SCITEPRESS} - Science and Technology Publications},
+  author = {Danilo Verhaert and Majid Nateghizad and Zekeriya Erkin},
+  title = {An Efficient Privacy-preserving Recommender System for e-Healthcare Systems},
+  booktitle = {Proceedings of the 15th International Joint Conference on e-Business and Telecommunications}
+}
+
+@incollection{Scardapane2017,
+  doi = {10.1007/978-3-319-56904-8_12},
+  url = {https://doi.org/10.1007/978-3-319-56904-8_12},
+  year = {2017},
+  month = aug,
+  publisher = {Springer International Publishing},
+  pages = {119--128},
+  author = {Simone Scardapane and Rosa Altilio and Valentina Ciccarelli and Aurelio Uncini and Massimo Panella},
+  title = {Privacy-Preserving Data Mining for Distributed Medical Scenarios},
+  booktitle = {Multidisciplinary Approaches to Neural Computing}
+}
+
+@inproceedings{Maulany2018,
+  doi = {10.5220/0006841403220331},
+  url = {https://doi.org/10.5220/0006841403220331},
+  year = {2018},
+  publisher = {{SCITEPRESS} - Science and Technology Publications},
+  author = {Christian Maulany and Majid Nateghizad and Bart Mennink and Zekeriya Erkin},
+  title = {Privacy-preserving Distributed Access Control for Medical Data},
+  booktitle = {Proceedings of the 15th International Joint Conference on e-Business and Telecommunications}
+}
+
+@article{Kikuchi2018,
+  doi = {10.1007/s10916-018-0930-9},
+  url = {https://doi.org/10.1007/s10916-018-0930-9},
+  year = {2018},
+  month = apr,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {42},
+  number = {5},
+  author = {Hiroaki Kikuchi and Xuping Huang and Shigeta Ikuji and Manami Inoue},
+  title = {Privacy-Preserving Hypothesis Testing for Reduced Cancer Risk on Daily Physical Activity},
+  journal = {Journal of Medical Systems}
+}
+
+@article{Tawfik2018,
+  doi = {10.1007/s13369-018-3122-5},
+  url = {https://doi.org/10.1007/s13369-018-3122-5},
+  year = {2018},
+  month = mar,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {43},
+  number = {12},
+  pages = {7747--7756},
+  author = {Ahmed M. Tawfik and Sahar F. Sabbeh and Tarek EL-Shishtawy},
+  title = {Privacy-Preserving Secure Multiparty Computation on Electronic Medical Records for Star Exchange Topology},
+  journal = {Arabian Journal for Science and Engineering}
+}
+
+@article{Wang2017,
+  doi = {10.1038/s41525-017-0036-1},
+  url = {https://doi.org/10.1038/s41525-017-0036-1},
+  year = {2017},
+  month = oct,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {2},
+  number = {1},
+  author = {Shuang Wang and Xiaoqian Jiang and Haixu Tang and Xiaofeng Wang and Diyue Bu and Knox Carey and Stephanie OM Dyke and Dov Fox and Chao Jiang and Kristin Lauter and Bradley Malin and Heidi Sofia and Amalio Telenti and Lei Wang and Wenhao Wang and Lucila Ohno-Machado},
+  title = {A community effort to protect genomic data sharing,  collaboration and outsourcing},
+  journal = {npj Genomic Medicine}
+}
+
+@article{MY19,
+  doi = {10.1093/bib/bbz013},
+  url = {https://doi.org/10.1093/bib/bbz013},
+  year = {2019},
+  month = feb,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {21},
+  number = {2},
+  pages = {511--526},
+  author = {Abukari Mohammed Yakubu and Yi-Ping Phoebe Chen},
+  title = {Ensuring privacy and security of genomic data and functionalities},
+  journal = {Briefings in Bioinformatics}
+}
+
+@article{Naveed2015,
+  doi = {10.1145/2767007},
+  url = {https://doi.org/10.1145/2767007},
+  year = {2015},
+  month = sep,
+  publisher = {Association for Computing Machinery ({ACM})},
+  volume = {48},
+  number = {1},
+  pages = {1--44},
+  author = {Muhammad Naveed and Erman Ayday and Ellen W. Clayton and Jacques Fellay and Carl A. Gunter and Jean-Pierre Hubaux and Bradley A. Malin and Xiaofeng Wang},
+  title = {Privacy in the Genomic Era},
+  journal = {{ACM} Computing Surveys}
+}
+
+@article{Chan2014,
+  doi = {10.1038/srep05233},
+  url = {https://doi.org/10.1038/srep05233},
+  year = {2014},
+  month = jun,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {4},
+  number = {1},
+  author = {Philip Chan and Itzel Lucio-Martinez and Xiaofan Mo and Christoph Simon and Wolfgang Tittel},
+  title = {Performing private database queries in a real-world environment using a quantum protocol},
+  journal = {Scientific Reports}
+}
+
+@article{Ito2017,
+  doi = {10.1038/s41598-017-08229-x},
+  url = {https://doi.org/10.1038/s41598-017-08229-x},
+  year = {2017},
+  month = aug,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {7},
+  number = {1},
+  author = {Tomohiro Ito and Hayato Koizumi and Nobumitsu Suzuki and Izumi Kakesu and Kento Iwakawa and Atsushi Uchida and Takeshi Koshiba and Jun Muramatsu and Kazuyuki Yoshimura and Masanobu Inubushi and Peter Davis},
+  title = {Physical implementation of oblivious transfer using optical correlated randomness},
+  journal = {Scientific Reports}
+}
+
+@article{AM19,
+  title={A Secure Quantum Communications Infrastructure for Europe},
+  author={Adam M. Lewis and Martino Travagnin},
+  journal={JRC116937},
+  year={2019}
+}
+
+@misc{libscapi,
+  title = {libscapi},
+  year = {2021},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/cryptobiu/libscapi/tree/master}}
+}
+
+@article{M10,
+    author = {McLennan, Deborah A. },
+    title = "{How to Read a Phylogenetic Tree.}",
+    journal = {Evolution: Education and Outreach},
+    volume = {3},
+    number = {4},
+    pages = {506-519},
+    year = {2010},
+    issn = {1936-6434},
+    doi = {10.1007/s12052-010-0273-6},
+    url = {https://doi.org/10.1007/s12052-010-0273-6}
+}
+
+@article{Z06,
+  year = {2006},
+  author = {Yang, Ziheng},
+  title = {Computational molecular evolution},
+  journal = {Oxford University Press}
+}
+
+@book{Felsenstein2003,
+  added-at = {2009-10-27T22:45:10.000+0100},
+  author = {Felsenstein, J.},
+  biburl = {https://www.bibsonomy.org/bibtex/2ad74e0b319ae8547bea6d8b6db9aab10/ebo},
+  interhash = {f2eecdb7ad0073c4a4fcf471f5ebef22},
+  intrahash = {ad74e0b319ae8547bea6d8b6db9aab10},
+  keywords = {phylogenetics},
+  publisher = {Sinauer Associates},
+  timestamp = {2009-10-27T22:45:10.000+0100},
+  title = {Inferring phylogenies},
+  year = 2003
+}
+
+@article{F89,
+  year = {1989},
+  volume = {5},
+  pages = {164--166},
+  author = {Felsenstein, J.},
+  title = {PHYLIP - Phylogeny Inference Package (Version 3.2)},
+  journal = {Cladistics}
+}
+
+@article{JC69,
+  title={Mammalian protein metabolism},
+  author={Jukes, Thomas Hughes and Cantor, Charles R},
+  journal={Academic Press, New York},
+  year={1969},
+  pages={21-132}
+}
+
+@article{L94,
+    author = {Lockhart, P J and Steel, M A and Hendy, M D and Penny, D},
+    title = "{Recovering evolutionary trees under a more realistic model of sequence evolution.}",
+    journal = {Molecular Biology and Evolution},
+    volume = {11},
+    number = {4},
+    pages = {605-612},
+    year = {1994},
+    month = {07},
+    issn = {0737-4038},
+    doi = {10.1093/oxfordjournals.molbev.a040136},
+    url = {https://doi.org/10.1093/oxfordjournals.molbev.a040136},
+    eprint = {https://academic.oup.com/mbe/article-pdf/11/4/605/11167060/40lock.pdf},
+}
+
+@article{K80,
+  title={A simple method for estimating evolutionary rates of base substitutions through comparative studies of nucleotide sequences},
+  author={Kimura, Motoo},
+  journal={Journal of molecular evolution},
+  volume={16},
+  number={2},
+  pages={111--120},
+  year={1980},
+  publisher={Springer}
+}
+
+@article{F84,
+    author = {Felsenstein, J and Churchill, G A},
+    title = "{A Hidden Markov Model approach to variation among sites in rate of evolution.}",
+    journal = {Molecular Biology and Evolution},
+    volume = {13},
+    number = {1},
+    pages = {93-104},
+    year = {1996},
+    month = {01},
+    issn = {0737-4038},
+    doi = {10.1093/oxfordjournals.molbev.a025575},
+    url = {https://doi.org/10.1093/oxfordjournals.molbev.a025575},
+    eprint = {https://academic.oup.com/mbe/article-pdf/13/1/93/11168269/10fels.pdf},
+}
+
+@book{PM09,
+  doi = {10.1017/cbo9780511819049},
+  url = {https://doi.org/10.1017/cbo9780511819049},
+  year = {2009},
+  publisher = {Cambridge University Press},
+  editor = {Philippe Lemey and Marco Salemi and Anne-Mieke Vandamme},
+  title = {The Phylogenetic Handbook}
+}
+
+@article{Evans2018,
+  doi = {10.1561/3300000019},
+  url = {https://doi.org/10.1561/3300000019},
+  year = {2018},
+  publisher = {Now Publishers},
+  volume = {2},
+  number = {2-3},
+  pages = {70--246},
+  author = {David Evans and Vladimir Kolesnikov and Mike Rosulek},
+  title = {A Pragmatic Introduction to Secure Multi-Party Computation},
+  journal = {Foundations and Trends{\textregistered} in Privacy and Security}
+}
+
+@incollection{Lindell2017,
+  doi = {10.1007/978-3-319-57048-8_6},
+  url = {https://doi.org/10.1007/978-3-319-57048-8_6},
+  year = {2017},
+  publisher = {Springer International Publishing},
+  pages = {277--346},
+  author = {Yehuda Lindell},
+  title = {How to Simulate It {\textendash} A Tutorial on the Simulation Proof Technique},
+  booktitle = {Tutorials on the Foundations of Cryptography}
+}
+
+@MISC{Goldreich98,
+    author = {Oded Goldreich},
+    title = {Secure Multi-Party Computation},
+    year = {1998}
+}
+
+@inproceedings{HM96,
+author = {Halevi, Shai and Micali, Silvio},
+title = {Practical and Provably-Secure Commitment Schemes from Collision-Free Hashing},
+year = {1996},
+isbn = {3540615121},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+booktitle = {Proceedings of the 16th Annual International Cryptology Conference on Advances in Cryptology},
+pages = {201–215},
+numpages = {15},
+series = {CRYPTO '96}
+}
+
+@INPROCEEDINGS{Shi02,
+  author={ {Yaoyun Shi}},
+  booktitle={The 43rd Annual IEEE Symposium on Foundations of Computer Science, 2002. Proceedings.}, 
+  title={Quantum lower bounds for the collision and the element distinctness problems}, 
+  year={2002},
+  volume={},
+  number={},
+  pages={513-519},}
+  
+@ARTICLE{ABLST17,
+       author = {{Aggarwal}, Divesh and {Brennen}, Gavin K. and {Lee}, Troy and
+         {Santha}, Miklos and {Tomamichel}, Marco},
+        title = "{Quantum attacks on Bitcoin, and how to protect against them}",
+      journal = {arXiv e-prints},
+     keywords = {Quantum Physics, Quantitative Finance - General Finance},
+         year = 2017,
+        month = oct,
+          eid = {arXiv:1710.10377},
+        pages = {arXiv:1710.10377},
+archivePrefix = {arXiv},
+       eprint = {1710.10377},
+ primaryClass = {quant-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv171010377A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@inproceedings{YE11,
+author = {Huang, Yan and Evans, David and Katz, Jonathan and Malka, Lior},
+title = {Faster Secure Two-Party Computation Using Garbled Circuits},
+year = {2011},
+publisher = {USENIX Association},
+address = {USA},
+abstract = {The abstract has been removed at the request of one of the authors.},
+booktitle = {Proceedings of the 20th USENIX Conference on Security},
+pages = {35},
+numpages = {1},
+location = {San Francisco, CA},
+series = {SEC'11}
+}
+
+@inproceedings{HS85,
+author = {Hastad, J and Shamir, A},
+title = {The Cryptographic Security of Truncated Linearly Related Variables},
+year = {1985},
+isbn = {0897911512},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/22145.22184},
+doi = {10.1145/22145.22184},
+booktitle = {Proceedings of the Seventeenth Annual ACM Symposium on Theory of Computing},
+pages = {356-362},
+numpages = {7},
+location = {Providence, Rhode Island, USA},
+series = {STOC '85}
+}
+
+@article{K92,
+title = "How to predict congruential generators",
+journal = "Journal of Algorithms",
+volume = "13",
+number = "4",
+pages = "527 - 545",
+year = "1992",
+issn = "0196-6774",
+doi = "https://doi.org/10.1016/0196-6774(92)90054-G",
+url = "http://www.sciencedirect.com/science/article/pii/019667749290054G",
+author = "Hugo Krawczyk"
+}
+
+@article{BM84,
+author = {Blum, Manuel and Micali, Silvio},
+title = {How to Generate Cryptographically Strong Sequences of Pseudo-Random Bits},
+year = {1984},
+issue_date = {November 1984},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+volume = {13},
+number = {4},
+issn = {0097-5397},
+url = {https://doi.org/10.1137/0213053},
+doi = {10.1137/0213053},
+journal = {SIAM J. Comput.},
+month = nov,
+pages = {850-864},
+numpages = {15}
+}
+
+@article{BBS86,
+author = {Blum, L and Blum, M and Shub, M},
+title = {A Simple Unpredictable Pseudo Random Number Generator},
+year = {1986},
+issue_date = {May 1986},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+volume = {15},
+number = {2},
+issn = {0097-5397},
+url = {https://doi.org/10.1137/0215025},
+doi = {10.1137/0215025},
+journal = {SIAM J. Comput.},
+month = may,
+pages = {364-383},
+numpages = {20}
+}
+
+@incollection{Alkassar2005,
+  doi = {10.1007/11424826_67},
+  url = {https://doi.org/10.1007/11424826_67},
+  year = {2005},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {634--646},
+  author = {Ammar Alkassar and Thomas Nicolay and Markus Rohe},
+  title = {Obtaining True-Random Binary Numbers from a Weak Radioactive Source},
+  booktitle = {Computational Science and Its Applications {\textendash} {ICCSA} 2005}
+}
+
+@article{GaviriaRojas2017,
+  doi = {10.1021/acs.nanolett.7b02118},
+  url = {https://doi.org/10.1021/acs.nanolett.7b02118},
+  year = {2017},
+  month = jul,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {17},
+  number = {8},
+  pages = {4976--4981},
+  author = {William A. Gaviria Rojas and Julian J. McMorrow and Michael L. Geier and Qianying Tang and Chris H. Kim and Tobin J. Marks and Mark C. Hersam},
+  title = {Solution-Processed Carbon Nanotube True Random Number Generator},
+  journal = {Nano Letters}
+}
+
+@article{HerreroCollantes2017,
+  doi = {10.1103/revmodphys.89.015004},
+  url = {https://doi.org/10.1103/revmodphys.89.015004},
+  year = {2017},
+  month = feb,
+  publisher = {American Physical Society ({APS})},
+  volume = {89},
+  number = {1},
+  author = {Miguel Herrero-Collantes and Juan Carlos Garcia-Escartin},
+  title = {Quantum random number generators},
+  journal = {Reviews of Modern Physics}
+}
+
+@inproceedings{Ferreira2021,
+  doi = {10.1109/conftele50222.2021.9435473},
+  url = {https://doi.org/10.1109/conftele50222.2021.9435473},
+  year = {2021},
+  month = feb,
+  publisher = {{IEEE}},
+  author = {Mauricio J. Ferreira and Nuno A. Silva and Armando N. Pinto and Nelson J. Muga},
+  title = {Homodyne Noise Characterization in Quantum Random Number Generators},
+  booktitle = {2021 Telecoms Conference ({ConfTELE})}
+}
+
+@article{Almeida2020,
+  doi = {10.1007/s11082-020-02622-z},
+  url = {https://doi.org/10.1007/s11082-020-02622-z},
+  year = {2020},
+  month = nov,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {52},
+  number = {11},
+  author = {Margarida Almeida and Daniel Pereira and Margarida Fac{\~{a}}o and Armando N. Pinto and Nuno A. Silva},
+  title = {Impact of imperfect homodyne detection on measurements of vacuum states shot noise},
+  journal = {Optical and Quantum Electronics}
+}
+
+@inproceedings{Silva2019,
+  doi = {10.1109/icton.2019.8840330},
+  url = {https://doi.org/10.1109/icton.2019.8840330},
+  year = {2019},
+  month = jul,
+  publisher = {{IEEE}},
+  author = {Nuno A. Silva and Margarida Almeida and Daniel Pereira and Margarida Facao and Nelson J. Muga and Armando N. Pinto},
+  title = {Role of Device Imperfections on the Practical Performance of Continuous-Variable Quantum Key Distribution Systems},
+  booktitle = {2019 21st International Conference on Transparent Optical Networks ({ICTON})}
+}
+
+@inproceedings{Almeida2021,
+  doi = {10.1109/conftele50222.2021.9435567},
+  url = {https://doi.org/10.1109/conftele50222.2021.9435567},
+  year = {2021},
+  month = feb,
+  publisher = {{IEEE}},
+  author = {Margarida Almeida and Margarida Facao and Nelson J. Muga and Armando N. Pinto and Nuno A. Silva},
+  title = {Secret key extraction in direct reconciliation {CV}-{QKD} systems},
+  booktitle = {2021 Telecoms Conference ({ConfTELE})}
+}
+
+@article{Tomamichel2017,
+  doi = {10.22331/q-2017-07-14-14},
+  url = {https://doi.org/10.22331/q-2017-07-14-14},
+  year = {2017},
+  month = jul,
+  publisher = {Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+  volume = {1},
+  pages = {14},
+  author = {Marco Tomamichel and Anthony Leverrier},
+  title = {A largely self-contained and complete security proof for quantum key distribution},
+  journal = {Quantum}
+}
+
+@inproceedings{F14,
+  author    = {Martin Franz and
+               Andreas Holzer and
+               Stefan Katzenbeisser and
+               Christian Schallhart and
+               Helmut Veith},
+  title     = {{CBMC-GC: An ANSI C Compiler for Secure Two-Party Computations}},
+  year      = {2014},
+  pages     = {244--249},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-54807-9_15},
+ url = {http://dx.doi.org/10.1007/978-3-642-54807-9_15},
+editor    = {Albert Cohen},
+  booktitle     = {Compiler Construction - 23rd International Conference, CC
+               2014, Held as Part of the European Joint Conferences on
+               Theory and Practice of Software, ETAPS 2014, Grenoble, France,
+               April 5-13, 2014. Proceedings},
+ publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {8409},
+  doi = {10.1007/978-3-642-54807-9_15},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{Bscher2017,
+  doi = {10.1007/s10703-017-0300-0},
+  url = {https://doi.org/10.1007/s10703-017-0300-0},
+  year = {2017},
+  month = sep,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {51},
+  number = {2},
+  pages = {308--331},
+  author = {Niklas B\"{u}scher and Martin Franz and Andreas Holzer and Helmut Veith and Stefan Katzenbeisser},
+  title = {On compiling Boolean circuits optimized for secure multi-party computation},
+  journal = {Formal Methods in System Design}
+}
+
+@incollection{Buescher2016,
+  doi = {10.1007/978-3-319-45741-3_5},
+  url = {https://doi.org/10.1007/978-3-319-45741-3_5},
+  year = {2016},
+  publisher = {Springer International Publishing},
+  pages = {80--98},
+  author = {Niklas Buescher and Andreas Holzer and Alina Weber and Stefan Katzenbeisser},
+  title = {Compiling Low Depth Circuits for Practical Secure Computation},
+  booktitle = {Computer Security {\textendash} {ESORICS} 2016}
+}
+
+@inproceedings{Bscher2018,
+  doi = {10.1145/3243734.3243786},
+  url = {https://doi.org/10.1145/3243734.3243786},
+  year = {2018},
+  month = jan,
+  publisher = {{ACM}},
+  author = {Niklas B\"{u}scher and Daniel Demmler and Stefan Katzenbeisser and David Kretzmer and Thomas Schneider},
+  title = {{HyCC}},
+  booktitle = {Proceedings of the 2018 {ACM} {SIGSAC} Conference on Computer and Communications Security}
+}
+
+@misc{mpc_benchmark,
+  title = {MPC-Benchmark},
+  year = {2021},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/cryptobiu/MPC-Benchmark}}
+}
+
+@incollection{K15,
+  doi = {10.1007/978-3-662-47989-6_35},
+  url = {https://doi.org/10.1007/978-3-662-47989-6_35},
+  year = {2015},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {724--741},
+  author = {Marcel Keller and Emmanuela Orsini and Peter Scholl},
+  title = {Actively Secure {OT} Extension with Optimal Overhead},
+  booktitle = {Lecture Notes in Computer Science}
+}
+
+@incollection{C15,
+  doi = {10.1007/978-3-319-22174-8_3},
+  url = {https://doi.org/10.1007/978-3-319-22174-8_3},
+  year = {2015},
+  publisher = {Springer International Publishing},
+  pages = {40--58},
+  author = {Tung Chou and Claudio Orlandi},
+  title = {The Simplest Protocol for Oblivious Transfer},
+  booktitle = {Progress in Cryptology -- {LATINCRYPT} 2015}
+}
+
+@incollection{Wolf2006,
+  doi = {10.1007/11761679_14},
+  url = {https://doi.org/10.1007/11761679_14},
+  year = {2006},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {222--232},
+  author = {Stefan Wolf and J\"{u}rg Wullschleger},
+  title = {Oblivious Transfer Is Symmetric},
+  booktitle = {Advances in Cryptology - {EUROCRYPT} 2006}
+}
+
+@article{FGSPSW18,
+  doi = {10.1038/s41467-018-03729-4},
+  url = {https://doi.org/10.1038/s41467-018-03729-4},
+  year = {2018},
+  month = apr,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {9},
+  number = {1},
+  author = {Fabian Furrer and Tobias Gehring and Christian Schaffner and Christoph Pacher and Roman Schnabel and Stephanie Wehner},
+  title = {Continuous-variable protocol for oblivious transfer in the noisy-storage model},
+  journal = {Nature Communications}
+}
+
+@inproceedings{Pinto2020,
+  doi = {10.1109/icton51198.2020.9203042},
+  url = {https://doi.org/10.1109/icton51198.2020.9203042},
+  year = {2020},
+  month = jul,
+  publisher = {{IEEE}},
+  author = {Armando N. Pinto and Laura Ortiz and Manuel Santos and Ana C. Gomes and Juan P. Brito and Nelson J. Muga and Nuno A. Silva and Paulo Mateus and Vicente Martin},
+  title = {Quantum Enabled Private Recognition of Composite Signals in Genome and Proteins},
+  booktitle = {2020 22nd International Conference on Transparent Optical Networks ({ICTON})}
+}
+
+@article{JAW20,
+  doi = {10.1126/sciadv.aba0959},
+  url = {https://doi.org/10.1126/sciadv.aba0959},
+  year = {2020},
+  month = sep,
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {6},
+  number = {36},
+  author = {Siddarth Koduru Joshi and Djeylan Aktas and S\"{o}ren Wengerowsky and Martin Lon{\v{c}}ari{\'{c}} and Sebastian Philipp Neumann and Bo Liu and Thomas Scheidl and Guillermo Curr{\'{a}}s Lorenzo and {\v{Z}}eljko Samec and Laurent Kling and Alex Qiu and Mohsen Razavi and Mario Stip{\v{c}}evi{\'{c}} and John G. Rarity and Rupert Ursin},
+  title = {A trusted node{\textendash}free eight-user metropolitan quantum communication network},
+  journal = {Science Advances}
+}
+
+@incollection{KRS16,
+  doi = {10.1007/978-3-662-53008-5_13},
+  url = {https://doi.org/10.1007/978-3-662-53008-5_13},
+  year = {2016},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {366--396},
+  author = {Ranjit Kumaresan and Srinivasan Raghuraman and Adam Sealfon},
+  title = {Network Oblivious Transfer},
+  booktitle = {Advances in Cryptology {\textendash} {CRYPTO} 2016}
+}
+
+@book{W12,
+author = {Warren, Henry S.},
+title = {Hacker's Delight},
+year = {2012},
+isbn = {0321842685},
+publisher = {Addison-Wesley Professional},
+edition = {2nd}
+}
+
+@ARTICLE{V59,
+  author={Volder, Jack E.},
+  journal={IRE Transactions on Electronic Computers}, 
+  title={The CORDIC Trigonometric Computing Technique}, 
+  year={1959},
+  volume={EC-8},
+  number={3},
+  pages={330-334},
+  doi={10.1109/TEC.1959.5222693}}
+
+@inproceedings{Songhori2019,
+  doi = {10.1145/3316781.3317777},
+  url = {https://doi.org/10.1145/3316781.3317777},
+  year = {2019},
+  month = jun,
+  publisher = {{ACM}},
+  author = {Ebrahim M. Songhori and M. Sadegh Riazi and Siam U. Hussain and Ahmad-Reza Sadeghi and Farinaz Koushanfar},
+  title = {{ARM}2GC},
+  booktitle = {Proceedings of the 56th Annual Design Automation Conference 2019}
+}
+
+@incollection{DFL+09,
+  doi = {10.1007/978-3-642-03356-8_24},
+  url = {https://doi.org/10.1007/978-3-642-03356-8_24},
+  year = {2009},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {408--427},
+  author = {Ivan Damg{\aa}rd and Serge Fehr and Carolin Lunemann and Louis Salvail and Christian Schaffner},
+  title = {Improving the Security of Quantum Protocols via Commit-and-Open},
+  booktitle = {Advances in Cryptology - {CRYPTO} 2009}
+}
+
+@article{Lindell2008,
+  doi = {10.1007/s00145-008-9036-8},
+  url = {https://doi.org/10.1007/s00145-008-9036-8},
+  year = {2008},
+  month = dec,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {22},
+  number = {2},
+  pages = {161--188},
+  author = {Yehuda Lindell and Benny Pinkas},
+  title = {A Proof of Security of Yao's Protocol for Two-Party Computation},
+  journal = {Journal of Cryptology}
+}
+
+@article{YPT18,
+author = {Zhiliang Yuan and Alan Plews and Ririka Takahashi and Kazuaki Doi and Winci Tam and Andrew Sharpe and Alexander Dixon and Evan Lavelle and James Dynes and Akira Murakami and Mamko Kujiraoka and Marco Lucamarini and Yoshimichi Tanizawa and Hideaki Sato and Andrew J. Shields},
+journal = {J. Lightwave Technol.},
+keywords = {Avalanche photodiodes; Distributed feedback lasers; Photon polarization; Quantum cryptography; Quantum key distribution; Single photon detectors},
+number = {16},
+pages = {3427--3433},
+publisher = {OSA},
+title = {10-Mb/s Quantum Key Distribution},
+volume = {36},
+month = {Aug},
+year = {2018},
+url = {http://www.osapublishing.org/jlt/abstract.cfm?URI=jlt-36-16-3427},
+abstract = {We report the first quantum-key-distribution (QKD) systems capable of delivering sustainable, real-time secure keys continuously at rates exceeding 10 Mb/s. To achieve such rates, we developed high-speed postprocessing modules, achieving maximum data throughputs of 60 MC/s, 55 Mb/s, and 108 Mb/s for standalone operation of sifting, error correction, and privacy amplification modules, respectively. The photonic layer of the QKD systems features high-speed single-photon detectors based on self-differencing InGaAs avalanche photodiodes, phase encoding using an asymmetric Mach--Zehnder interferometer, and active stabilization of the interferometer phase and photon polarization. An efficient variant of the decoy-state BB84 protocol is implemented for the security analysis, with a large dataset size of {\textless}inline-formula{\textgreater}               {\textless}tex-math{\textgreater}\$10^8\${\textless}/tex-math{\textgreater}            {\textless}/inline-formula{\textgreater} bits selected to mitigate finite-size effects. Over a 2-dB channel, a record secure key rate of 13.72 Mb/s has been achieved averaged over 4.4 days of operation. We confirm the robustness and long-term stability on a second QKD system continuously running for 1 month without any user invention.},
+}
+
+@misc{IDQ,
+  title = {ID Quantique website},
+  year = {2021},
+  howpublished = {\url{https://www.idquantique.com/random-number-generation/products/quantis-qrng-pcie/}}
+}
+
+@misc{GISAID,
+  title = {GISAID database},
+  year = {2021},
+  howpublished = {\url{https://www.gisaid.org/}}
+}
+
+@article {MPL19,
+	Title = {The EMBL-EBI search and sequence analysis tools APIs in 2019},
+	Author = {Madeira, Fábio and Park, Young Mi and Lee, Joon and Buso, Nicola and Gur, Tamer and Madhusoodanan, Nandana and Basutkar, Prasad and Tivey, Adrian R N and Potter, Simon C and Finn, Robert D and Lopez, Rodrigo},
+	DOI = {10.1093/nar/gkz268},
+	Number = {W1},
+	Volume = {47},
+	Month = {July},
+	Year = {2019},
+	Journal = {Nucleic acids research},
+	ISSN = {0305-1048},
+	Pages = {W636-W641},
+	Abstract = {The EMBL-EBI provides free access to popular bioinformatics sequence analysis applications as well as to a full-featured text search engine with powerful cross-referencing and data retrieval capabilities. Access to these services is provided via user-friendly web interfaces and via established RESTful and SOAP Web Services APIs (https://www.ebi.ac.uk/seqdb/confluence/display/JDSAT/EMBL-EBI+Web+Services+APIs+-+Data+Retrieval). Both systems have been developed with the same core principles that allow them to integrate an ever-increasing volume of biological data, making them an integral part of many popular data resources provided at the EMBL-EBI. Here, we describe the latest improvements made to the frameworks which enhance the interconnectivity between public EMBL-EBI resources and ultimately enhance biological data discoverability, accessibility, interoperability and reusability.},
+	URL = {https://europepmc.org/articles/PMC6602479},
+}
+
+
